# brogw

./: .dir-locals.el  .gitattributes  .gitignore  AUTHORS  CONTRIBUTE  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.org  autogen.sh  browser-router.c  browser-router.desktop  config.conf  configure.ac  make-dist
.github/workflows/: ci-unix.yml  ci-windows.yml
config/: Makefile.am  config.conf.example
data/: Makefile.am
etc/: Makefile.am  NEWS  brogw.desktop  browser-router.desktop
m4/: .gitignore
src/: Makefile.am  brogw_config.c  brogw_config.h  executor.c  executor.h  main.c  matcher.c  matcher.h  utils.c  utils.h
