# Copyright (C) 2024 Free Software Foundation, Inc.
#
# This file is part of Brogw.
#
# Brogw is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# Brogw is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public
# License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Brogw.  If not, see <https://www.gnu.org/licenses/>.

dotdesktopdir = $(datarootdir)/applications
dotdesktop_DATA = brogw.desktop

EXTRA_DIST = config.conf.example

pkgconfigdir = $(sysconfdir)/brogw
pkgconfig_DATA = config.conf.example
